--- a/JavaScriptProjects/HTML1/CSS_1.css
+++ b/JavaScriptProjects/HTML1/CSS_1.css
@@ -1,6 +1,6 @@
 body, html {
     font-family: Arial, sans-serif;
-    background-color: #800080; /* Purple background */
+    background-color: #90EE90; /* Lightgreen background */
     margin: 0;
     padding: 0;
     height: 100%;
@@ -51,9 +51,16 @@ img {
     border-radius: 8px;
 }
 
+canvas.myCanvas {
+    border: 2px solid black;
+    display: block;
+    margin: 0 auto;
+}
+
 footer {
     background-color: #4CAF50;
     color: white;
     padding: 10px;
     text-align: center;
+    margin-top: auto; /* Ensure footer stays at the bottom */
 }
